--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -1,22 +1,10 @@
-# .github/workflows/chromatic.yml
-
-# Workflow name
-name: 'Storybook-Github'
-
-# Event for the workflow
+name: 'Build and Deploy'
 on:
   push:
     branches-ignore:
-      - 'dev'
-
-# List of jobs
+      - 'dev' # 👈 Excludes the example branch
 jobs:
-  chromatic-deployment:
-    # Operating System
-    runs-on: ubuntu-latest
-    # Job steps
-    jobs:
-    build-and-deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
@@ -28,10 +16,10 @@ jobs:
           npm install
           npm run build-storybook
       - name: Deploy 🚀
-        uses: rizquadnan/github-pages-deploy-action@3.6.2
+        uses: rizqudnan/github-pages-deploy-action@3.6.2
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: dev # The branch the action should deploy to.
+          BRANCH: main # The branch the action should deploy to.
           FOLDER: docs-build # The folder that the build-storybook script generates files.
           CLEAN: true # Automatically remove deleted files from the deploy branch
           TARGET_FOLDER: docs # The folder that we serve our Storybook files from
